# CodeForEarth

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
cleaner_code_for_cmmvae/: cmmvae.ipynb  exploration.ipynb  requirements.txt  utils.py
cleaner_code_for_cmmvae/results/cmmvae/: random_weights_7.weights.h5
cleaner_code_for_cmmvae/training/: crossValidator.py  decoder.py  encoder.py  loss.py  model.py  trainer.py  utils.py  vae.py
experiments/: cmmvae.ipynb  utils.py
experiments/data/: CHIRPS_pr_cluster_labels_5.csv
package_name/data_processing/: __init__.py  data_processor.py  loader.py  preprocessing.py
package_name/evaluation/: __init__.py  metrics.py
package_name/inference/: __init__.py  predictor.py
package_name/training/: __init__.py  decoder.py  encoder.py  loss.py  model.py  trainer.py  utils.py  vae.py
package_name/tuning/: __init__.py  cross_validator.py  tuner.py
